syntax = "proto3";

package products;

option go_package = "grpc;grpc";

message Product {
  uint64 id = 1;
  string upc = 2;
  string name = 3;
  int64 price = 4;
}

message ProductQuery {
  string upc = 1;
}

message TopProductsQuery {
  int64 first = 1;
}

service ProductService {
  rpc FindProductByUpc(ProductQuery) returns (Product) {}
  rpc TopProducts(TopProductsQuery) returns (stream Product) {}
}
